--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </style>
 </head>
 <body onload="processor.doLoad()">
-  <video class="v1" src="videos/d.mov" controls="true"></video>
+  <video class="v1" src="videos/truck-assistant.mp4" controls="true"></video>
   <video class="v2" src="videos/simulation.mp4" controls="true"></video>
   <audio controls="">
     <source src="audio/master.m4a" type="audio/mpeg">
